# varnish-batteries

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  apt-deploy  pkg-deb-fpm  template__CMakeLists.txt  template__import-upstream  varnish.cmake
curl/: debug_flags.h  import-upstream  vmod_curl.c
curl/tests/: test02.vtc  test04.vtc  test06.vtc  test09.vtc  test10.vtc  test11.vtc  test13.vtc  test14.vtc
dns/: CMakeLists.txt  import-upstream  vmod_dns.vcc
dns/tests/: vmod_dns01.vtc  vmod_dns_example.vtc  vmod_dns_valid_host_host.vtc  vmod_dns_valid_host_ip.vtc  vmod_dns_valid_ip.vtc
encoding/: base64.c  urlcode.c  vmod_encoding.c
hashids/: CMakeLists.txt
snippets/: acmeflip.vcl
vmods/_templates/: CMakeLists.txt  import-upstream
vmods/cookie/: CMakeLists.txt  import-upstream  vmod_cookie.c  vmod_cookie.vcc
vmods/curl/: CMakeLists.txt  debug_flags.h  import-upstream  vmod_curl.vcc
vmods/digest/: CMakeLists.txt  import-upstream  vmod_digest.c  vmod_digest.vcc
vmods/digest/tests/: test01.vtc  test02.vtc  test_hash.vtc  test_hex.vtc  test_nullstring.vtc
vmods/dns/: CMakeLists.txt  import-upstream  vmod_dns.c  vmod_dns.vcc
vmods/encoding/: CMakeLists.txt  urlcode.h  vmod_encoding.vcc
vmods/header/: CMakeLists.txt  import-upstream  vmod_header.c  vmod_header.vcc
vmods/str/: CMakeLists.txt  import-upstream  vmod_str.c  vmod_str.vcc
vmods/var/: CMakeLists.txt  import-upstream  vmod_var.c  vmod_var.vcc
vmods/vsthrottle/: CMakeLists.txt  vmod_vsthrottle.c
vmods/xcounter/: CMakeLists.txt  import-upstream  vmod_xcounter.c  vmod_xcounter.vcc
(+59 files in other folders)
